traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:19: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def parcours():Unit{
                   ^TraversalDiagonal:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if ((getY == 0)||(getX == getMondeLargeur())){
  ^